# mlops_hw3

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-build.yaml  ci.yml
project/backend/: Dockerfile  main.py  requirements.txt
project/frontend/: .dockerignore  Dockerfile  app.py
